[build-system]
requires = ["hatchling","hatch-requirements-txt"]
build-backend = "hatchling.build"
[project]
name = "vrprot"
version = "0.a2"
authors = [
  { name="Till Oblau", email="till@menchelab.com" },
  { name="Felix Fischer", email="a51832854@unet.univie.ac.at" },
]
maintainers = [
  { name="Till Oblau", email="till@menchelab.com" },
]
description = "This package is used to generate your own protein structure images to represent 3D protein structures on the VRNetzer platform."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic=["dependencies"]

[project.urls]
"Homepage" = "https://menchelab.com/"
"Bug Tracker" = "https://github.com/menchelab/alphafold_to_vrnetzer/issues"
"Git" = "https://github.com/menchelab/alphafold_to_vrnetzer"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]